kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-mark
  name: web-mark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-mark
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web-mark
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 15
            preference:
              matchExpressions:
              - key: kubernetes.io/role
                operator: In
                values:
                - 'worker'
          - weight: 10
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: In
                values:
                - 'true'
          - weight: 5
            preference:
              matchExpressions:
              - key: disk
                operator: In
                values:
                - 'hdd'
          - weight: 5
            preference:
              matchExpressions:
              - key: corecount
                operator: In
                values:
                - '2'
          - weight: 5
            preference:
              matchExpressions:
              - key: corecount
                operator: In
                values:
                - 'ssd'
      containers:
        - args:
            - gunicorn
            - mysite.wsgi:application
            - --bind
            - 0.0.0.0:8000
          image: mcbtaguiad/tagsdev_web:v1.1.1
          imagePullPolicy: Always
          name: web-mark
          ports:
            - containerPort: 8000
          # volumeMounts:
          #   - mountPath: /home/app/web/staticfiles
          #     name: static-volume
      restartPolicy: Always
      # volumes:
      #   - name: static-volume
      #     persistentVolumeClaim:
      #       claimName: static-volume
