kube/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    postgresql: web
  name: web
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    postgresql: web
status:
  loadBalancer: {}
