kube/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/acme-challenge-type: dns01
    #kubernetes.io/tls-acme: "true"
  name: tagsdev-ingress
  namespace: web-tagsdev-prod
spec:
  rules:
  - host: mark.tagsdev.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port:
              number: 8000
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - mark.tagsdev.click
    secretName: tagsdev-tls
